@@ -201,14 +201,11 @@ static struct {
 	{"Kodak:DC4800", 0x040a, 0x0160},
 	/* Below other camers known to be detected by interface class */
 	
-	{"Kodak:DC290" , 0x040a, 0x0112},
 	{"Kodak:DX3215", 0x040a, 0x0525},
 	{"Kodak:DX3500", 0x040a, 0x0500},
 	{"Kodak:DX3600", 0x040a, 0x0510},
 	{"Kodak:DX3700", 0x040a, 0x0530},
 	{"Kodak:DX3900", 0x040a, 0x0170},
-	{"Kodak:DX4230", 0x040a, 0x0535},
-	{"Kodak:DX4300", 0x040a, 0x0566},
 	{"Kodak:DX4330", 0x040a, 0x0555},
 	{"Kodak:DX4530", 0x040a, 0x0576},
 	{"Kodak:DX4900", 0x040a, 0x0550},
@@ -220,9 +217,9 @@ static struct {
 	{"Kodak:LS443", 0x040a, 0x0568},
 	{"Kodak:LS663", 0x040a, 0x0569},
 	{"Kodak:CX4200", 0x040a, 0x0560},
-	{"Kodak:CX4210", 0x040a, 0x0560},
-	/* both above may share the same product IDs???
-	   A Europe/US versions of the same model??? */
+	{"Kodak:CX4210", 0x040a, 0x0565},
+	/* both above with different product IDs
+	   normal/retail versions of the same model */
 	{"Kodak:CX4230", 0x040a, 0x0535},
 	{"Kodak:CX4300", 0x040a, 0x0566},
 	{"Kodak:CX6200", 0x040a, 0x0574},
@@ -241,7 +238,6 @@ static struct {
 	{"HP:PhotoSmart 735 (PTP mode)", 0x03f0, 0x6a02},
 	{"HP:PhotoSmart 812 (PTP mode)", 0x03f0, 0x4202},
 	{"HP:PhotoSmart 850 (PTP mode)", 0x03f0, 0x4302},
-	{"HP:PhotoSmart 120 (PTP mode)", 0x03f0, 0x6502},
 	/* I got information that all SONY PTP cameras use the same
 	   product/vendor IDs */
 	{"Sony:DSC-P5 (PTP mode)", 0x054c, 0x004e},
@@ -270,6 +266,8 @@ static struct {
 	{"Nikon:Coolpix 4300 (PTP mode)", 0x04b0, 0x010f},
 	/* Nikon Coolpix SQ: M. Holzbauer, 07 Jul 2003 */
 	{"Nikon:Coolpix SQ (PTP mode)", 0x04b0, 0x0202},
+	/* Nikon Coolpix 5400: T. Kaproncai, 25 Jul 2003 */
+	{"Nikon:Coolpix 5400 (PTP mode)", 0x04b0, 0x0119},
 
 
 	/* (at least some) newer Canon cameras can be switched between
